--- a/theme/assets/assets/css/style.css
+++ b/theme/assets/assets/css/style.css
@@ -554,6 +554,9 @@ section {
 /*--------------------------------------------------------------
 # About Us
 --------------------------------------------------------------*/
+.about .content {
+  font-size: 15px;
+}
 .about .content h3 {
   font-weight: 700;
   font-size: 28px;
@@ -746,21 +749,21 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Cta
+# Cta_sec
 --------------------------------------------------------------*/
-.cta {
+.cta-sec {
   background: #5c81b8;
   padding: 80px 0;
 }
-.cta h3 {
+.cta-sec h3 {
   color: #fff;
   font-size: 28px;
   font-weight: 700;
 }
-.cta p {
+.cta-sec p {
   color: #fff;
 }
-.cta .cta-btn {
+.cta-sec .cta-btn {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 14px;
@@ -774,17 +777,17 @@ section {
   color: #fff;
   border-radius: 4px;
 }
-.cta .cta-btn:hover {
+.cta-sec .cta-btn:hover {
   background: #fff;
   color: #5c81b8;
 }
 @media (max-width: 1024px) {
-  .cta {
+  .cta-sec {
     background-attachment: scroll;
   }
 }
 @media (min-width: 769px) {
-  .cta .cta-btn-container {
+  .cta-sec .cta-btn-container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
