--- a/theme/assets/assets/css/style.css
+++ b/theme/assets/assets/css/style.css
@@ -9,6 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
+  font-size: 15px;
   font-family: "Open Sans", sans-serif;
   color: #444444;
 }
@@ -353,6 +354,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero .container {
   text-align: center;
+  padding: 50% 0;
 }
 #hero h2 {
   color: #fff;
@@ -408,6 +410,9 @@ h1, h2, h3, h4, h5, h6 {
 #hero .carousel-control-next-icon:hover, #hero .carousel-control-prev-icon:hover {
   background: rgba(255, 255, 255, 0.3);
   color: rgba(255, 255, 255, 0.8);
+}
+#hero .carousel-indicators {
+  width: 70%;
 }
 #hero .carousel-indicators li {
   cursor: pointer;
@@ -554,9 +559,6 @@ section {
 /*--------------------------------------------------------------
 # About Us
 --------------------------------------------------------------*/
-.about .content {
-  font-size: 15px;
-}
 .about .content h3 {
   font-weight: 700;
   font-size: 28px;
