--- a/theme/assets/assets/css/style.css
+++ b/theme/assets/assets/css/style.css
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5, h6 {
   background: #fbfbfb;
   font-size: 15px;
   height: 40px;
-  padding: 0;
+  padding: 0px 0px 0px 50px;
 }
 #topbar .contact-info a {
   line-height: 0;
